# circulation

./: .dockerignore  .env.playlivros.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pymarkdown.config.json  CLAUDE.md  Dockerfile  Dockerfile-es654.arm64  Makefile  README.md  alembic.ini  analytics.py  app.py  app_server.py  cdn.py  config.py  coverage.py  docker-compose.yml  exceptions.py  external_list.py  external_search.py  facets.py  key.py  lane.py  local_analytics_provider.py  log.py  marc.py  metadata_layer.py  migartion_scripts.py  mirror.py  mock_analytics_provider.py  monitor.py  opds.py  opds2_import.py  opds_import.py  overdrive.py  poetry.toml  problem_details.py  pyproject.toml  (+10 more)
.github/: codecov.yml  dependabot.yml  pr_review_prompt.md  pull.yml  pull_request_template.md  release.yml
alembic/: README  env.py
api/: adobe_vendor_id.py  annotations.py  announcements.py  app.py  authenticator.py  axis.py  base_controller.py  bibliotheca.py  circulation.py  circulation_exceptions.py  circulation_manager.py  config.py  controller.py  controller_marc.py  coverage.py  custom_index.py  custom_patron_catalog.py  enki.py  feedbooks.py  firstbook.py  firstbook2.py  google_analytics_provider.py  kansas_patron.py  lanes.py  local_analytics_exporter.py  marc.py  metadata_wrangler.py  millenium_patron.py  monitor.py  novelist.py  nyt.py  odilo.py  odl.py  odl2.py  onix.py  opds.py  opds2.py  opds_for_distributors.py  overdrive.py  problem_details.py  (+9 more)
classifier/: __init__.py  age.py  bic.py  bisac.py  ddc.py  gutenberg.py  keyword.py  lcc.py  overdrive.py  rbdigital.py  simplified.py
core/: README.md  __init__.py  analytics.py  app_server.py  config.py  connection_config.py  coverage.py  entrypoint.py  equivalents_coverage.py  exceptions.py  external_list.py  external_search.py  facets.py  flask_sqlalchemy_session.py  importers.py  lane.py  local_analytics_provider.py  log.py  marc.py  metadata_layer.py  mirror.py  mock_analytics_provider.py  monitor.py  opds.py  opds2.py  opds2_import.py  opds_import.py  opds_schema.py  opensearch.py  overdrive.py  problem_details.py  requirements-base.txt  requirements-dev.txt  s3.py  scripts.py  selftest.py  test  testing.py  tox.ini  user_profile.py
core-bin/: initialize_database  migrate_database  opds_entry_coverage
customlists/: README.md  customlist_explain.py  customlist_export.py  customlist_import.py  customlist_report.py  customlists-report.schema.json  customlists.schema.json  export.py  fetch.py  import.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.baseimage  Dockerfile.ci  Dockerfile.exec  Dockerfile.minio.ci  Dockerfile.os.ci  Dockerfile.os2.ci  Dockerfile.os3.ci  Dockerfile.scripts  Dockerfile.webapp  README.md  app_setup.sh  celery-entrypoint.sh  install_python_packages.sh  logrotate.sh  nginx.sh  simplified_app.sh  simplified_app2.sh  simplified_app3.sh  simplified_cron.sh  syslog-ng.sh  system_setup.sh  uwsgi.sh
docs/: FUNCTIONS.md  index.html  openapi.yaml  playlivros-opds.md  storage-backblaze-b2.md
integration_tests/: benchmark_feed_queries.py  test_borrow.py  test_circulation.py  test_feed.py  test_hold.py  test_search.py
lcp/: credential.py
migration/: 20150813_set_open_access_download_url.py  20150826-4-recalculate_age_range_for_childrens_books.py  20150826-5-recalculate_work_presentation_for_childrens_books.py  20150828-recalculate_age_range_for_childrens_books.py  20151002-fix-audiobooks-mislabeled-as-print-books.py  20151019-recalculate-fiction-status-for-overdrive-subjects.py  20151020-fix-dewey-304.py  20151021-set-license-pool-for-list-membership.py  20160706-repair-duplicate-and-ambiguous-contributor-records.py  20160719-fix-incorrectly-encoded-work-descriptions.py  20160721-kick-out-licensepools-without-pwid.py  20160728-1-add-rights-status-names.py  20170713-18-move-third-party-config-to-external-integrations.py  20170908-change-metadata-wrangler-settings.py  20170926-migrate-log-configuration.py  20171201-rebuild-search-index.py  20200803-patron-external-sync.sql  20201112-add-incommon-saml-federation-metadata.py  20210622-remove-rbd.sql  20211009-remove-random-sort-option.py  20220409-admin-email-unique-constraint.py  20220428-namespace-overdrive-configuration.py  20220509-admin-email-unique-constraint.py  20220608-fix-broken-deprioritize-lcp-config.py  20220608-fix-broken-deprioritize-lcp-config.sql  20220624-update-customlists-auto-update.sql  20220701-add-devicetoken-cascade.sql  20220722-replace-devicetoken-unique.sql  20220818-customlists-auto-update-facets.sql  20220913-customlists-add-status.sql  20220923-resources-add-templated.sql  20221011-clear-opds4dist-credentials-cache.sql  20230106-set-target-age-for-child-lanes.sql  20230118-rename-easy-reader-lane.sql  20230126-clean-up-proquest.sql  20230211-rename-package.sql  20230214-remove-admin-credential.sql
model/: __init__.py  admin.py  cachedfeed.py  circulationevent.py  classification.py  collection.py  complaint.py  configuration.py  constants.py  contributor.py  coverage.py  credential.py  customlist.py  datasource.py  edition.py  hasfulltablecache.py  identifier.py  integrationclient.py  library.py  licensing.py  listeners.py  measurement.py  patron.py  resource.py  work.py
startup_tasks/: 2026_02_10_0000_force_harvest_opds_for_distributors.py  2026_02_10_force_harvest_opds_for_distributors.py  2026_02_17_force_re_harvest_all_opds_for_distributors.py  2026_05_12_reclassify_fb_misclassified_works.py  2026_06_17_repair_remaining_null_audience_works.py  2026_06_30_remove_old_search_indexes.py
tests/: conftest.py  test_adobe_vendor_id.py  test_analytics.py  test_annotations.py  test_announcements.py  test_app_server.py  test_authentication_for_opds.py  test_authenticator.py  test_axis.py  test_bibliotheca.py  test_cdn.py  test_circulation_data.py  test_circulation_exceptions.py  test_circulationapi.py  test_config.py  test_controller.py  test_coverage.py  test_custom_index.py  test_custom_patron_catalog.py  test_enki.py  test_entrypoint.py  test_equivalency.py  test_external_list.py  test_external_search.py  (+43 more)
(+2768 files in other folders)
