[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    '@(typing\.)?overload$',
    '^\s*\.\.\.\s*$',
    '^\s*pass\s*$',
    '^\s*raise NotImplementedError\s*$',
    'class .*\bProtocol\):',
]
include_namespace_packages = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
# For some reason coverage wants to include this file, even though
# it doesn't exist. I believe this a bug in either dependency-injector
# or coverage, but it's not impacting us negatively, so we can just
# tell coverage to ignore it, so we don't get a warning about it.
omit = ["src/dependency_injector/providers.pxd", "src/dependency_injector/providers.pyx"]
parallel = true
relative_files = true
source = ["src"]

[tool.isort]
combine_as_imports = true
known_first_party = ["palace"]
known_third_party = ["alembic"]
profile = "black"

[tool.mypy]
# TODO: Enable the the check_untyped_defs option
# This will get rid of the warnings that we get when running mypy
# > note: By default the bodies of untyped functions are not checked
# However this currently causes a number of errors to surface that will
# need to be cleaned up before we can enable the option.
# check_untyped_defs = true
# When we enable this option, we should remove this disable. Its just here
# to silence the noise in the mypy output for now, so its easier to see when
# there are errors in the output.
disable_error_code = "annotation-unchecked"
explicit_package_bases = true
files = ["alembic", "src/palace", "tests"]
mypy_path = ["alembic", "src"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict_bytes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# In our tests, we often overwrite methods on classes to mock out behavior.
# This is a common pattern in Python, but mypy doesn't like it. This override
# silences those errors, but only for the tests module.
# See discussion here:
# https://github.com/python/mypy/issues/2427
disable_error_code = "method-assign, union-attr"
module = "tests.*"
# Mypy seems to have issues in the test code where it thinks code is unreachable
# when it is not. So we disable this warning for the tests module.
warn_unreachable = false

[[tool.mypy.overrides]]
# This override is the equivalent of running mypy with the --strict flag.
# This is a work in progress, but we should try to get as many of our files
# into the module list here as possible.
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
module = [
    "palace.manager.api.admin.announcement_list_validator",
    "palace.manager.api.admin.config",
    "palace.manager.api.admin.controller.catalog_services",
    "palace.manager.api.admin.controller.collection_settings",
    "palace.manager.api.admin.controller.discovery_service_library_registrations",
    "palace.manager.api.admin.controller.discovery_services",
    "palace.manager.api.admin.controller.integration_settings",
    "palace.manager.api.admin.controller.library_settings",
    "palace.manager.api.admin.controller.metadata_services",
    "palace.manager.api.admin.controller.patron",
    "palace.manager.api.admin.controller.patron_auth_services",
    "palace.manager.api.admin.controller.report",
    "palace.manager.api.admin.controller.util",
    "palace.manager.api.admin.dashboard_stats",
    "palace.manager.api.admin.form_data",
    "palace.manager.api.admin.model.dashboard_statistics",
    "palace.manager.api.adobe_vendor_id",
    "palace.manager.api.circulation.*",
    "palace.manager.api.controller.circulation_manager",
    "palace.manager.api.controller.loan",
    "palace.manager.api.controller.marc",
    "palace.manager.api.controller.odl_notification",
    "palace.manager.api.controller.patron_activity_history",
    "palace.manager.api.lcp.hash",
    "palace.manager.api.metadata.*",
    "palace.manager.api.util.flask",
    "palace.manager.core.selftest",
    "palace.manager.data_layer.*",
    "palace.manager.feed.*",
    "palace.manager.integration.base",
    "palace.manager.integration.catalog.*",
    "palace.manager.integration.configuration.*",
    "palace.manager.integration.discovery.*",
    "palace.manager.integration.goals",
    "palace.manager.integration.license.*",
    "palace.manager.integration.metadata.*",
    "palace.manager.integration.settings",
    "palace.manager.opds.*",
    "palace.manager.scripts.initialization",
    "palace.manager.scripts.rotate_jwe_key",
    "palace.manager.scripts.search",
    "palace.manager.search.document",
    "palace.manager.search.migrator",
    "palace.manager.search.revision",
    "palace.manager.search.revision_directory",
    "palace.manager.search.service",
    "palace.manager.search.v5",
    "palace.manager.service.*",
    "palace.manager.sqlalchemy.hassessioncache",
    "palace.manager.sqlalchemy.model.announcements",
    "palace.manager.sqlalchemy.model.circulationevent",
    "palace.manager.sqlalchemy.model.classification",
    "palace.manager.sqlalchemy.model.collection",
    "palace.manager.sqlalchemy.model.datasource",
    "palace.manager.sqlalchemy.model.identifier",
    "palace.manager.sqlalchemy.model.integration",
    "palace.manager.sqlalchemy.model.library",
    "palace.manager.sqlalchemy.model.patron",
    "palace.manager.sqlalchemy.util",
    "palace.manager.util.authentication_for_opds",
    "palace.manager.util.base64",
    "palace.manager.util.cache",
    "palace.manager.util.http.*",
    "palace.manager.util.log",
    "palace.manager.util.migration.*",
    "palace.manager.util.problem_detail",
    "palace.manager.util.string_helpers",
    "palace.manager.util.uuid",
    "palace.manager.util.worker_pools",
    "palace.manager.util.xmlparser",
    "tests.fixtures.authenticator",
    "tests.fixtures.webserver",
    "tests.migration.*",
]
no_implicit_reexport = true
strict_concatenate = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Custom mypy overrides for the palace.manager.celery module.
# Since Celery is untyped, and we're using a lot of its
# features, we disable some of the strict mypy checks
# that get annoying when working with Celery.
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
module = [
    "palace.manager.celery.*",
]
no_implicit_reexport = true
strict_concatenate = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# This override silences errors for modules we import that don't currently
# have type hints, or type stubs that cover them. We should go through this
# list periodically and remove modules that have since added type hints.
ignore_missing_imports = true
module = [
    "aws_xray_sdk.ext.*",
    "celery.*",
    "expiringdict",
    "feedparser",
    "firebase_admin.*",
    "flask_babel",
    "fuzzywuzzy",
    "google.auth",
    "greenlet",
    "html_sanitizer",
    "isbnlib",
    "jsonschema.*",
    "jwcrypto",
    "kombu.*",
    "lxml.*",
    "multipledispatch",
    "nameparser",
    "onelogin.saml2.*",
    # This is ignored because the file is created when building a container
    # so it typically doesn't exist when running mypy, but since it only
    # contains a couple version strings it can be safely ignored
    "palace.manager._version",
    "pyld",
    "textblob.*",
    "unicodecsv",
    "uwsgi",
    "wcag_contrast_ratio",
]

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "The Palace Project Manager Application"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "palace.manager"
packages = [{include = "palace/manager", from = "src"}]
readme = "README.md"
repository = "https://github.com/ThePalaceProject/circulation"
version = "0"  # Version number is managed with tags in git

[tool.poetry.dependencies]
alembic = {extras = ["tz"], version = "^1.8.1"}
aws-xray-sdk = "~2.14"
# Lets us use StrEnum for Python 3.10 and below
# TODO: Remove this when we drop support for Python 3.10
"backports.strenum" = {version = "^1.3.1", python = "<3.11"}
bcrypt = "^5.0.0"
bidict = "^0.23.1"
boto3 = "^1.28"
celery = {extras = ["redis", "tblib", 'sqs'], version = "^5.3.6"}
certifi = "*"
click = "^8.1.3"
contextlib2 = "21.6.0"
croniter = "^6.0.0"
dependency-injector = "^4.41"
expiringdict = "1.2.2"
feedparser = "6.0.12"
firebase-admin = "^7.0.0"
Flask = "^3.0"
Flask-Babel = "^4.0"
Flask-Cors = "6.0.1"
frozendict = "^2.4.6"
fuzzywuzzy = "0.18.0"  # fuzzywuzzy is for author name manipulations
google-api-python-client = "^2.162.0"
google-auth = "^2.38.0"
html-sanitizer = "^2.1.0"
httpx = {version = "^0.28.1", extras = ["http2"]}
isbnlib = "^3.10.14"
itsdangerous = "^2.1.2"
jsonschema = "^4.22.0"
jwcrypto = "^1.4.2"
levenshtein = "^0.27"
lxml = {extras = ["html-clean"], version = "6.0.0"}
multipledispatch = "^1.0"
nameparser = "^1.1"  # nameparser is for author name manipulations
opensearch-py = "^3.0"
pillow = "^11.2.1"
pycountry = "^24.6.1"
pycryptodome = "^3.18"
pydantic = {version = "2.11.10", extras = ["email"]}
pydantic-settings = "^2.5.2"
pydantic-xml = "^2.17.0"
pyinstrument = "^5.0"
PyJWT = "^2.8"
PyLD = "2.0.4"
pymarc = "5.3.1"
pyOpenSSL = "^25.0.0"
pyparsing = "3.2.5"
pyspellchecker = "0.8.3"
python = ">=3.10,<4"
python-dateutil = "2.9.0.post0"
python3-saml = "^1.16"  # python-saml is required for SAML authentication
pytz = "^2025.1"
pyyaml = "^6.0"
redis = "^5.0.5"
redmail = "^0.6.0"
requests = "^2.29"
sqlalchemy = {version = "^1.4", extras = ["mypy"]}
tenacity = "^9.0.0"
textblob = "0.19.0"
types-pyopenssl = "^24.0.0.20240130"
types-pyyaml = "^6.0.12.9"
# We import typing_extensions, so we can use new annotation features.
# - Self (Python 3.11)
typing_extensions = {version = "^4.5.0", python = "<3.11"}
unicodecsv = "0.14.1"  # this is used, but can probably be removed on py3
uritemplate = "4.2.0"
urllib3 = "^2.5.0"
uWSGI = "~2.0.21"
watchtower = "3.4.0"  # watchtower is for Cloudwatch logging integration
wcag-contrast-ratio = "0.9"
Werkzeug = "^3.0.0"
# xmlsec is a transitive dependency of python3-saml, we set it here so we
# can control its version, since its version is linked to the version of
# lxml we use.
# See: https://github.com/xmlsec/python-xmlsec/issues/356
xmlsec = "^1.3.16"

[tool.poetry.group.ci.dependencies]
dunamai = "^1.16"
pre-commit = "^4.0"
tox = "^4.4"
tox-docker = "^5.0"
tox-gh-actions = "^3.0"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {version = "^1.28", extras = ["boto3", "cloudwatch", "essential", "logs", "s3"]}
freezegun = "~1.5.0"
google-api-python-client-stubs = "^1.29.0"
Jinja2 = "^3.1.2"
mypy = "^1.4.1"
psycopg2-binary = "~2.9.5"
pyfakefs = "^5.3"
pytest = ">=7.2.0"
pytest-alembic = "^0.12.0"
pytest-asyncio = "^1.1.0"
pytest-celery = "^0.0.0"
pytest-cov = "^7.0.0"
pytest-timeout = "*"
pytest-xdist = "^3.5.0"
requests-mock = "1.12.1"
types-aws-xray-sdk = "2.14.0.20250516"
types-croniter = "^6.0.0"
types-Flask-Cors = "^6.0.0"
types-psycopg2 = "^2.9.21"
types-python-dateutil = "^2.8.19"
types-pytz = "^2025.1"
types-redis = "^4.6.0.20240425"
types-requests = "^2.28.11"

[tool.poetry.group.pg]
optional = true

[tool.poetry.group.pg.dependencies]
psycopg2 = "~2.9.5"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=xml",
    "--dist=worksteal",
    "--numprocesses=auto",
    "--strict-markers",
]
asyncio_mode = "auto"
filterwarnings = [
    "error::pydantic.PydanticDeprecatedSince20",
    "error::pytest.PytestWarning",
    "error::sqlalchemy.exc.SADeprecationWarning",
    "error::sqlalchemy.exc.SAWarning",
]
markers = [
    "minio: mark test as requiring minio",
    "opensearch: mark test as requiring opensearch",
]
timeout = "600"
timeout_method = "thread"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
