[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
ci = [
    "dunamai>=1.16,<2",
    "pre-commit>=4.0,<5",
    "tox-docker>=5.0,<6",
    "tox-gh-actions>=3.0,<4",
    "tox-uv>=1.35.1,<2",
    "tox>=4.53.0,<5",
]
dev = [
    "boto3-stubs[boto3,cloudwatch,essential,logs,s3]>=1.42.90,<2",
    "freezegun>=1.5.0,<1.6",
    "google-api-python-client-stubs>=1.29.0,<2",
    "Jinja2>=3.1.2,<4",
    "mypy>=1.20.1,<2",
    "pyfakefs>=6.2.0,<7",
    "pytest-alembic>=0.12.0,<0.13",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-celery>=0.0.0,<0.0.1",
    "pytest-cov>=7.0.0,<8",
    "pytest-timeout",
    "pytest-xdist>=3.5.0,<4",
    "pytest>=7.2.0",
    "requests-mock==1.12.1",
    "types-aws-xray-sdk==2.14.0.20250516",
    "types-croniter>=6.0.0,<7",
    "types-Flask-Cors>=6.0.0,<7",
    "types-openpyxl>=3.1,<4",
    "types-psycopg2>=2.9.21,<3",
    "types-python-dateutil>=2.8.19,<3",
    "types-redis>=4.6.0.20240425,<5",
    "types-requests>=2.28.11,<3",
]

[project]
authors = [{name = "The Palace Project", email = "info@thepalaceproject.org"}]
dependencies = [
    "alembic[tz]>=1.18.4,<2",
    "annotated-types>=0.7.0,<0.8",
    "authlib>=1.6.11,<2",
    "aws-xray-sdk>=2.15,<2.16",
    "bcrypt>=5.0.0,<6",
    "bidict>=0.23.1,<0.24",
    "boto3>=1.42.89,<2",
    "celery[redis,sqs,tblib]>=5.6.3,<6",
    "certifi",
    "click>=8.1.3,<9",
    "croniter>=6.0.0,<7",
    "dependency-injector>=4.41,<5",
    "expiringdict==1.2.2",
    "feedparser==6.0.12",
    "firebase-admin>=7.4.0,<8",
    "Flask-Babel>=4.0,<5",
    "Flask-Cors==6.0.2",
    "Flask>=3.0,<4",
    "frozendict>=2.4.6,<3",
    "fuzzywuzzy==0.18.0",  # fuzzywuzzy is for author name manipulations
    "google-api-python-client>=2.162.0,<3",
    "google-auth>=2.49.2,<3",
    "html-sanitizer>=2.1.0,<3",
    "httpx[http2]>=0.28.1,<0.29",
    "isbnlib>=3.10.14,<4",
    "itsdangerous>=2.1.2,<3",
    "jsonschema>=4.22.0,<5",
    "jwcrypto>=1.4.2,<2",
    "levenshtein>=0.27,<0.28",
    "lxml[html-clean]==6.0.4",
    "multipledispatch>=1.0,<2",
    "nameparser>=1.1,<2",  # nameparser is for author name manipulations
    "openpyxl>=3.1,<4",
    "opensearch-py>=3.0,<4",
    "palace-opds",
    "palace-util",
    "pillow>=12.0.0,<13",
    "psycopg2-binary>=2.9.5,<2.10",
    "pycountry>=26.2.16,<27",
    "pycryptodome>=3.18,<4",
    "pydantic-settings>=2.5.2,<3",
    "pydantic-xml>=2.20.0,<3",
    "pydantic[email]>=2.13.2,<3",
    "pyinstrument>=5.0,<6",
    "PyJWT>=2.8,<3",
    "PyLD==3.0.0",
    "pymarc==5.3.1",
    "pyOpenSSL>=26.0.0,<27",
    "pyparsing==3.3.2",
    "pyspellchecker==0.9.0",
    "python-dateutil==2.9.0.post0",
    "python3-saml>=1.16,<2",  # python-saml is required for SAML authentication
    "pyyaml>=6.0,<7",
    "redis>=6.4.0,<7",
    "redmail>=0.6.0,<0.7",
    "requests>=2.29,<3",
    "simpleeval>=1.0.3,<2",
    "sqlalchemy[mypy]>=1.4.54,<2",
    "tenacity>=9.0.0,<10",
    "textblob==0.20.0",
    "types-pyopenssl>=24.0.0.20240130,<25",
    "types-pyyaml>=6.0.12.9,<7",
    "unicodecsv==0.14.1",  # this is used, but can probably be removed on py3
    "uritemplate==4.2.0",
    "urllib3>=2.5.0,<3",
    "uWSGI>=2.0.21,<2.1",
    "watchtower==3.4.0",  # watchtower is for Cloudwatch logging integration
    "wcag-contrast-ratio==0.9",
    "Werkzeug>=3.0.0,<4",
    # xmlsec is a transitive dependency of python3-saml, we set it here so we
    # can control its version, since its version is linked to the version of
    # lxml we use.
    # See: https://github.com/xmlsec/python-xmlsec/issues/356
    "xmlsec==1.3.17",
]
description = "The Palace Project Manager Application"
license = "Apache-2.0"
name = "palace-manager"
readme = "README.md"
requires-python = ">=3.12,<4"
version = "0"  # Version number is managed with tags in git; dunamai populates _version.py at build time.

[project.scripts]
palace-startup-task = "palace.manager.scripts.startup:create_startup_task"

[project.urls]
Homepage = "https://thepalaceproject.org"
Repository = "https://github.com/ThePalaceProject/circulation"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    '@(typing\.)?overload$',
    '^\s*\.\.\.\s*$',
    '^\s*pass\s*$',
    '^\s*raise NotImplementedError\s*$',
    'class .*\bProtocol\):',
]
include_namespace_packages = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
# For some reason coverage wants to include this file, even though
# it doesn't exist. I believe this a bug in either dependency-injector
# or coverage, but it's not impacting us negatively, so we can just
# tell coverage to ignore it, so we don't get a warning about it.
omit = ["src/dependency_injector/providers.pxd", "src/dependency_injector/providers.pyx"]
parallel = true
relative_files = true
source = ["packages/palace-opds/src", "packages/palace-util/src", "src"]

[tool.hatch.build]
# node_modules directories only exist for local admin-client development
# (e.g. via an `npm link` symlink) and should never be packaged into the
# sdist or wheel.
exclude = ["**/node_modules"]

[tool.hatch.build.targets.wheel]
packages = ["src/palace"]

[tool.isort]
combine_as_imports = true
known_first_party = ["palace.manager"]
known_palace = ["palace.opds", "palace.util"]
known_third_party = ["alembic"]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,PALACE,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
# This is the main mypy configuration for the project.
# All new code should aim to pass mypy with strict settings.
disallow_untyped_calls = false
explicit_package_bases = true
files = [
    "alembic",
    "packages/palace-opds/src/palace",
    "packages/palace-util/src/palace",
    "src/palace",
    "tests",
]
mypy_path = [
    "alembic",
    "packages/palace-opds/src",
    "packages/palace-util/src",
    "src",
]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Overrides for the tests module.
check_untyped_defs = false
# In our tests, we often overwrite methods on classes to mock out behavior.
# This is a common pattern in Python, but mypy doesn't like it. This override
# silences those errors, but only for the tests module.
# See discussion here:
# https://github.com/python/mypy/issues/2427
disable_error_code = "method-assign, union-attr, annotation-unchecked"
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
module = "tests.*"
strict_equality = false
warn_return_any = false
# Mypy seems to have issues in the test code where it thinks code is unreachable
# when it is not. So we disable this warning for the tests module.
warn_unreachable = false

[[tool.mypy.overrides]]
# These overrides use lax checking for any modules that we have not
# yet added type hints to. We are aiming to gradually add type hints
# to all of these modules, at which point we will remove this override.
check_untyped_defs = false
disable_error_code = "annotation-unchecked"
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
module = [
    "palace.manager.api.admin.admin_authentication_provider",
    "palace.manager.api.admin.model.custom_lists",
    "palace.manager.api.admin.password_admin_authentication_provider",
    "palace.manager.api.admin.routes",
    "palace.manager.api.admin.validator",
    "palace.manager.api.annotations",
    "palace.manager.api.app",
    "palace.manager.api.authentication.base",
    "palace.manager.api.authentication.basic",
    "palace.manager.api.authentication.basic_token",
    "palace.manager.api.authenticator",
    "palace.manager.api.circulation_manager",
    "palace.manager.api.config",
    "palace.manager.api.controller.annotation",
    "palace.manager.api.controller.base",
    "palace.manager.api.controller.device_tokens",
    "palace.manager.api.controller.index",
    "palace.manager.api.controller.opds_feed",
    "palace.manager.api.controller.patron_auth_token",
    "palace.manager.api.controller.playtime_entries",
    "palace.manager.api.controller.profile",
    "palace.manager.api.controller.urn_lookup",
    "palace.manager.api.controller.work",
    "palace.manager.api.local_analytics_exporter",
    "palace.manager.api.routes",
    "palace.manager.api.util.profilers",
    "palace.manager.api.util.xray",
    "palace.manager.core.app_server",
    "palace.manager.core.classifier",
    "palace.manager.core.classifier.age",
    "palace.manager.core.classifier.bic",
    "palace.manager.core.classifier.bisac",
    "palace.manager.core.classifier.ddc",
    "palace.manager.core.classifier.gutenberg",
    "palace.manager.core.classifier.keyword",
    "palace.manager.core.classifier.lcc",
    "palace.manager.core.classifier.overdrive",
    "palace.manager.core.classifier.simplified",
    "palace.manager.core.classifier.work",
    "palace.manager.core.config",
    "palace.manager.core.coverage",
    "palace.manager.core.entrypoint",
    "palace.manager.core.equivalents_coverage",
    "palace.manager.core.external_list",
    "palace.manager.core.lcp.credential",
    "palace.manager.core.monitor",
    "palace.manager.core.opensearch",
    "palace.manager.core.user_profile",
    "palace.manager.customlists.exporter",
    "palace.manager.customlists.report",
    "palace.manager.feed.worklist.base",
    "palace.manager.feed.worklist.contributor",
    "palace.manager.feed.worklist.crawlable",
    "palace.manager.feed.worklist.database",
    "palace.manager.feed.worklist.dynamic",
    "palace.manager.feed.worklist.hierarchy",
    "palace.manager.feed.worklist.recommendation",
    "palace.manager.feed.worklist.series",
    "palace.manager.feed.worklist.specific",
    "palace.manager.integration.patron_auth.kansas_patron",
    "palace.manager.integration.patron_auth.millenium_patron",
    "palace.manager.integration.patron_auth.saml.auth",
    "palace.manager.integration.patron_auth.saml.configuration.model",
    "palace.manager.integration.patron_auth.saml.controller",
    "palace.manager.integration.patron_auth.saml.credential",
    "palace.manager.integration.patron_auth.saml.metadata.federations.loader",
    "palace.manager.integration.patron_auth.saml.metadata.federations.validator",
    "palace.manager.integration.patron_auth.saml.metadata.filter",
    "palace.manager.integration.patron_auth.saml.metadata.model",
    "palace.manager.integration.patron_auth.saml.metadata.monitor",
    "palace.manager.integration.patron_auth.saml.metadata.parser",
    "palace.manager.integration.patron_auth.saml.provider",
    "palace.manager.integration.patron_auth.saml.python_expression_dsl.ast",
    "palace.manager.integration.patron_auth.saml.python_expression_dsl.evaluator",
    "palace.manager.integration.patron_auth.sirsidynix_authentication_provider",
    "palace.manager.search.filter",
    "palace.manager.search.pagination",
    "palace.manager.search.query",
    "palace.manager.sqlalchemy.bulk_operation",
    "palace.manager.sqlalchemy.flask_sqlalchemy_session",
    "palace.manager.sqlalchemy.listeners",
    "palace.manager.sqlalchemy.model.contributor",
    "palace.manager.sqlalchemy.model.coverage",
    "palace.manager.sqlalchemy.model.customlist",
    "palace.manager.sqlalchemy.model.lane",
    "palace.manager.sqlalchemy.model.measurement",
    "palace.manager.sqlalchemy.model.resource",
    "palace.manager.sqlalchemy.model.saml",
    "palace.manager.sqlalchemy.model.work",
    "palace.manager.sqlalchemy.session",
]
warn_return_any = false

[[tool.mypy.overrides]]
# Custom mypy overrides for the palace.manager.celery module.
# Since Celery is untyped, and we're using a lot of its
# features, we disable some of the strict mypy checks
# that get annoying when working with Celery.
disallow_subclassing_any = false
disallow_untyped_decorators = false
module = [
    "palace.manager.celery.*",
]

[[tool.mypy.overrides]]
# This override silences errors for modules we import that don't currently
# have type hints, or type stubs that cover them. We should go through this
# list periodically and remove modules that have since added type hints.
ignore_missing_imports = true
module = [
    "authlib.jose",
    "authlib.jose.errors",
    "aws_xray_sdk.ext.*",
    "celery.*",
    "expiringdict",
    "feedparser",
    "firebase_admin.*",
    "flask_babel",
    "fuzzywuzzy",
    "google.auth",
    "greenlet",
    "html_sanitizer",
    "isbnlib",
    "jsonschema.*",
    "jwcrypto.*",
    "kombu.*",
    "lxml.*",
    "multipledispatch",
    "nameparser",
    "onelogin.saml2.*",
    # This is ignored because the file is created when building a container
    # so it typically doesn't exist when running mypy, but since it only
    # contains a couple version strings it can be safely ignored
    "palace.manager._version",
    "pyld",
    "simpleeval",
    "textblob.*",
    "unicodecsv",
    "uwsgi",
    "wcag_contrast_ratio",
]

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=xml",
    "--dist=worksteal",
    "--numprocesses=auto",
    "--strict-markers",
]
asyncio_mode = "auto"
filterwarnings = [
    "error::pydantic.PydanticDeprecatedSince20",
    "error::pytest.PytestWarning",
    "error::sqlalchemy.exc.SADeprecationWarning",
    "error::sqlalchemy.exc.SAWarning",
    # onelogin has some deprecation warnings that they don't look like they
    # are going to fix anytime soon, so we ignore them here, so we don't have
    # to see in our tests.
    # https://github.com/SAML-Toolkits/python3-saml/issues/434
    "ignore::DeprecationWarning:onelogin.saml2",
]
markers = [
    "minio: mark test as requiring minio",
    "opensearch: mark test as requiring opensearch",
]
timeout = "600"
timeout_method = "thread"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.uv.sources]
palace-opds = {workspace = true}
palace-util = {workspace = true}

[tool.uv.workspace]
members = ["packages/palace-opds", "packages/palace-util"]
